--- a/mass_mailing_custom_unsubscribe/views/mail_unsubscription_view.xml
+++ b/mass_mailing_custom_unsubscribe/views/mail_unsubscription_view.xml
@@ -128,13 +128,11 @@
     </field>
 </record>
 
-<act_window
-        id="mail_unsubscription_action"
-        name="(Un)subscriptions"
-        view_mode="tree,form,pivot,graph"
-        res_model="mail.unsubscription"
-    />
-
+<record model="ir.actions.act_window" id="mail_unsubscription_action">
+    <field name="name">(Un)subscriptions</field>
+    <field name="res_model">mail.unsubscription</field>
+    <field name="view_mode">tree,form,pivot,graph</field>
+</record>
 <menuitem
         id="mail_unsubscription_menu"
         parent="mass_mailing.mass_mailing_menu_root"
