--- a/app_odoo_customize/views/app_theme_config_settings_views.xml
+++ b/app_odoo_customize/views/app_theme_config_settings_views.xml
@@ -210,7 +210,7 @@
                 name="odooApp"
                 parent="base.menu_administration"
                 sequence="1"
-                groups="base.group_system"/>
+                groups="base.group_no_one"/>
         <menuitem
                 id="menu_app_theme_config"
                 parent="menu_app_group"
