--- a/app_odoo_customize/views/ir_ui_menu_views.xml
+++ b/app_odoo_customize/views/ir_ui_menu_views.xml
@@ -3,7 +3,7 @@
     <data noupdate="0">
 <!--        将菜单管理在设置中提前-->
         <record id="base.menu_grant_menu_access" model="ir.ui.menu">
-            <field name="parent_id" ref="base.menu_administration"/>
+            <field name="parent_id" ref="base.next_id_2"/>
         </record>
         <record id="app_edit_menu" model="ir.ui.view">
             <field name="name">app.ir.ui.menu.tree</field>
