--- a/hr_payroll/views/hr_contract_views.xml
+++ b/hr_payroll/views/hr_contract_views.xml
@@ -21,6 +21,7 @@
             </xpath>
         </field>
     </record>
+    <!--
     <record id="hr_contract_advantage_template_view_form" model="ir.ui.view">
         <field name="name">hr.contract.advantage.template.form</field>
         <field name="model">hr.contract.advantage.template</field>
@@ -66,6 +67,7 @@
         <field name="res_model">hr.contract.advantage.template</field>
         <field name="view_mode">form</field>
     </record>
+-->
     <record id="view_employee_form_inherit_ssnid_daeris" model="ir.ui.view">
         <field name="name">view.employee.form.inherit.ssnid.daeris</field>
         <field name="model">hr.employee</field>
@@ -224,7 +226,7 @@
             </xpath>
         </field>
     </record>
-    <menuitem id="hr_contract_advantage_template_menu_action" action="hr_contract_advantage_template_action" parent="menu_hr_payroll_configuration" sequence="50"/>
+    <!--<menuitem id="hr_contract_advantage_template_menu_action" action="hr_contract_advantage_template_action" parent="menu_hr_payroll_configuration" sequence="50"/>-->
 <!--    CONTRACT TYPE     -->
     <record id="hr_contract_type_view_form" model="ir.ui.view">
             <field name="name">hr.contract.type.form</field>
