--- a/hr_payroll/views/hr_payroll_report.xml
+++ b/hr_payroll/views/hr_payroll_report.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-         <report 
+         <record 
             id="action_contribution_register" 
             model="hr.contribution.register" 
             string="PaySlip Lines By Conribution Register"
@@ -9,7 +9,7 @@
             file="hr_payroll.report_contributionregister"
             menu="False"
         />
-        <report 
+        <record 
             id="action_report_payslip" 
             model="hr.payslip" 
             string="Payslip"
@@ -19,7 +19,7 @@
             print_report_name="'Payslip - %s' % (object.employee_id.name)"
         />
 
-        <report
+        <record
             id="payslip_details_report"
             model="hr.payslip"
             string="PaySlip Details"
