update payroll bugs

--- a/hr_payroll/views/hr_payroll_report.xml
+++ b/hr_payroll/views/hr_payroll_report.xml
@@ -1,6 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-         <record 
+    <record id="action_contribution_register" model="ir.actions.report">
+        <field name="name">hr_payroll.report_contributionregister</field>
+        <field name="model">hr.contribution.register</field>
+        <field name="report_type">qweb-pdf</field>
+        <field name="report_name">PaySlip Lines By Conribution Register</field>
+        <field name="report_file">hr_payroll.report_contributionregister</field>
+    </record>
+    <record id="action_report_payslip" model="ir.actions.report">
+        <field name="name">hr_payroll.report_payslip</field>
+        <field name="model">hr.payslip</field>
+        <field name="report_type">qweb-pdf</field>
+        <field name="report_name">Payslip</field>
+        <field name="report_file">hr_payroll.report_payslip</field>
+        <field name="print_report_name">'Payslip - %s' % (object.employee_id.name)</field>
+    </record>
+    <record id="payslip_details_report" model="ir.actions.report">
+        <field name="name">hr_payroll.report_payslipdetails</field>
+        <field name="model">hr.payslip</field>
+        <field name="report_type">qweb-pdf</field>
+        <field name="report_name">PaySlip Details</field>
+        <field name="report_file">hr_payroll.report_payslipdetails</field>
+        <field name="print_report_name">'Payslip Details - %s' % (object.employee_id.name)</field>
+    </record>
+<!--
+         <report 
             id="action_contribution_register" 
             model="hr.contribution.register" 
             string="PaySlip Lines By Conribution Register"
@@ -9,7 +33,7 @@
             file="hr_payroll.report_contributionregister"
             menu="False"
         />
-        <record 
+        <report 
             id="action_report_payslip" 
             model="hr.payslip" 
             string="Payslip"
@@ -19,7 +43,7 @@
             print_report_name="'Payslip - %s' % (object.employee_id.name)"
         />
 
-        <record
+        <report
             id="payslip_details_report"
             model="hr.payslip"
             string="PaySlip Details"
@@ -28,4 +52,5 @@
             file="hr_payroll.report_payslipdetails"
             print_report_name="'Payslip Details - %s' % (object.employee_id.name)"
         />
+-->
 </odoo>
