[FIX] abs_so_minimum_quantity: Error-prone use of @class

--- a/abs_so_minimum_quantity/views/templates.xml
+++ b/abs_so_minimum_quantity/views/templates.xml
@@ -30,33 +30,33 @@
       </xpath>
     </template>
     <template id="cart_lines_minimum" inherit_id="website_sale.cart_lines" name="Shopping Cart Lines">
-      <xpath expr="//td[@class='text-center td-qty']" position="after">
-        <t t-if="line.product_id.minimum_order_quantity &gt; 0">
-            <input type="hidden" t-att-value="line.product_id.minimum_order_quantity" id="qtyMin"/>
-        </t>
-      </xpath>
-      <xpath expr="//input[@class='js_quantity form-control quantity']" position="replace">
-        <t t-if="line.product_id.minimum_order_quantity &gt; 0">
-            <input type="text" class="js_quantity form-control quantity" t-att-data-min="line.product_id.minimum_order_quantity" t-att-data-line-id="line.id" t-att-data-product-id="line.product_id.id" t-att-value="int(line.product_uom_qty) == line.product_uom_qty and int(line.product_uom_qty) or line.product_uom_qty" onchange="validateMin()" id="qtyVal"/>
-            <script>
-            function validateMin() {
-                var x = parseFloat(document.getElementById("qtyVal").value);
-                var y = parseFloat(document.getElementById("qtyMin").value);
-                if (isNaN(x)) {
-                    document.getElementById("qtyVal").value = document.getElementById("qtyVal").defaultValue;
-                }
-                else {
-                    if (x &gt; 0 &amp;&amp; y &gt; x) {
+        <xpath expr="//td[hasclass('text-center','td-qty')]" position="after">
+            <t t-if="line.product_id.minimum_order_quantity &gt; 0">
+                <input type="hidden" t-att-value="line.product_id.minimum_order_quantity" id="qtyMin"/>
+            </t>
+        </xpath>
+        <xpath expr="//input[hasclass('js_quantity','form-control','quantity')]" position="replace">
+            <t t-if="line.product_id.minimum_order_quantity &gt; 0">
+                <input type="text" class="js_quantity form-control quantity" t-att-data-min="line.product_id.minimum_order_quantity" t-att-data-line-id="line.id" t-att-data-product-id="line.product_id.id" t-att-value="int(line.product_uom_qty) == line.product_uom_qty and int(line.product_uom_qty) or line.product_uom_qty" onchange="validateMin()" id="qtyVal"/>
+                <script>
+                function validateMin() {
+                    var x = parseFloat(document.getElementById("qtyVal").value);
+                    var y = parseFloat(document.getElementById("qtyMin").value);
+                    if (isNaN(x)) {
                         document.getElementById("qtyVal").value = document.getElementById("qtyVal").defaultValue;
                     }
+                    else {
+                        if (x &gt; 0 &amp;&amp; y &gt; x) {
+                            document.getElementById("qtyVal").value = document.getElementById("qtyVal").defaultValue;
+                        }
+                    }
                 }
-            }
-            </script>
-        </t>
-		<t t-else="">
-            <input type="text" class="js_quantity form-control quantity" t-att-data-line-id="line.id" t-att-data-product-id="line.product_id.id" t-att-value="int(line.product_uom_qty) == line.product_uom_qty and int(line.product_uom_qty) or line.product_uom_qty" />
-        </t>
-      </xpath>
+                </script>
+            </t>
+            <t t-else="">
+                <input type="text" class="js_quantity form-control quantity" t-att-data-line-id="line.id" t-att-data-product-id="line.product_id.id" t-att-value="int(line.product_uom_qty) == line.product_uom_qty and int(line.product_uom_qty) or line.product_uom_qty" />
+            </t>
+        </xpath>
     </template>
     <!--template id="product_configurator_configure_optional_products_minimum" inherit_id="sale.product_configurator_configure_optional_products">
       <xpath expr="//input[@name='add_qty']" position="replace">
