--- a/hr_payroll/views/hr_payroll_report.xml
+++ b/hr_payroll/views/hr_payroll_report.xml
@@ -4,24 +4,41 @@
         <field name="name">hr_payroll.report_contributionregister</field>
         <field name="model">hr.contribution.register</field>
         <field name="report_type">qweb-pdf</field>
-        <field name="report_name">PaySlip Lines By Conribution Register</field>
+        <!--<field name="report_name">PaySlip Lines By Conribution Register</field>-->
+        <field name="report_name">hr_payroll.report_contributionregister</field>
         <field name="report_file">hr_payroll.report_contributionregister</field>
     </record>
+<!--
+    <record id="payslip_report" model="ir.actions.report">
+        <field name="name">Report Payslip</field>
+        <field name="model">hr.payslip</field>
+        <field name="report_type">qweb-pdf</field>
+        <field name ="report_name">hr_payroll.report_payslip</field>
+        <field name ="report_file">hr_payroll.report_payslip</field>
+        <field name ="binding_model_id" ref="model_hr_payslip"/>
+        <field name ="binding_type">report</field>
+    </record>
+-->
     <record id="action_report_payslip" model="ir.actions.report">
         <field name="name">hr_payroll.report_payslip</field>
         <field name="model">hr.payslip</field>
         <field name="report_type">qweb-pdf</field>
-        <field name="report_name">Payslip</field>
+        <field name="report_name">hr_payroll.report_payslip</field>
         <field name="report_file">hr_payroll.report_payslip</field>
         <field name="print_report_name">'Payslip - %s' % (object.employee_id.name)</field>
+        <field name ="binding_model_id" ref="model_hr_payslip"/>
+        <field name ="binding_type">report</field>
     </record>
     <record id="payslip_details_report" model="ir.actions.report">
         <field name="name">hr_payroll.report_payslipdetails</field>
         <field name="model">hr.payslip</field>
         <field name="report_type">qweb-pdf</field>
-        <field name="report_name">PaySlip Details</field>
+        <!--<field name="report_name">PaySlip Details</field>-->
+        <field name="report_name">hr_payroll.report_payslipdetails</field>
         <field name="report_file">hr_payroll.report_payslipdetails</field>
         <field name="print_report_name">'Payslip Details - %s' % (object.employee_id.name)</field>
+        <field name ="binding_model_id" ref="model_hr_payslip"/>
+        <field name ="binding_type">report</field>
     </record>
 <!--
          <report 
